# panisul/apps/backend/src/app.ts
@@ -17,6 +17,7 @@ import { ZodError } from "zod";
 import { productsRouter } from "./modules/produtos/routes";
 import { fileURLToPath } from "url";
 import { clientesRouter } from "./modules/clientes/routes";
+import { recebiveisRouter } from "./modules/financeiro/recebiveis/routes";
 
 const __dirname = path.dirname(fileURLToPath(import.meta.url));
 
@@ -47,6 +48,7 @@ app.get("/api/v1/health", (req, res) => {
 app.use("/api/v1/auth", authRouter);
 app.use("/api/v1/products", productsRouter);
 app.use("/api/v1/clients", clientesRouter);
+app.use("/api/v1/receivables", recebiveisRouter);
 app.use("/api/v1/sales", vendasRouter);
 
 // Not found handler
